# AssignMate_new

./: .dockerignore  .env.example  .gitignore  AssignMate.postman_collection.json  Makefile  README.md  docker-compose.dev.yml  docker-compose.stage.yml  docker-compose.yml
AssignMate[Backend]/: .env.example  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
AssignMate[Backend]/accounts/: admin.py  apps.py  choices.py  forms.py  managers.py  models.py  urls.py
AssignMate[Backend]/accounts/migrations/: 0001_initial.py  0002_user_first_name_user_last_name.py  0003_user_profile_fields.py  0004_user_contact_method.py
AssignMate[Backend]/accounts/serializers/: __init__.py  auth.py
AssignMate[Backend]/accounts/views/: __init__.py  auth.py
AssignMate[Backend]/assignments/: admin.py  apps.py  choices.py  mixins.py  permissions.py  policies.py  urls.py  views.py
AssignMate[Backend]/assignments/migrations/: 0001_initial.py  0002_alter_submission_status.py  0003_remove_assignment_deleted_at_and_more.py  0004_assignment_order.py  0005_remove_submission_selected_options_and_more.py  0006_assignment_deadline_and_submission_statuses.py
AssignMate[Backend]/common/: apps.py  models.py  viewsets.py
AssignMate[Backend]/config/: settings.py  urls.py
AssignMate[Backend]/courses/: admin.py  apps.py  choices.py  mixins.py  permissions.py  policies.py  querysets.py  selectors.py  urls.py
AssignMate[Backend]/stats/: apps.py  permissions.py  selectors.py  serializers.py  urls.py  views.py
AssignMate[Backend]/telegram/: models.py  serializers.py  urls.py  views.py
(+111 files in other folders)
